2000-07-24  Fatih Demir	<kabalak@gmx.net> # which EMAIL_ADDRESS ?

	* mime-type-capplet/nautilus-mime-type.desktop: Added the
		Turkish desktop entries.

2000-07-21  Mathieu Lacage  <set EMAIL_ADDRESS environment variable>

	Closes bug 1120, 1118, 1176 from buzilla.eazel.com
	source incompatible change. Removes metadata support.
	Basically, it changes the signature of all the functions which 
	had metadata support and removes one parameter. To take this change
	into account, you basically need to remove one NULL parameter from 
	the calls which have changed. 
	
	* idl/gnome-vfs-slave.idl:
	* idl/gnome-vfs-types.idl:
	* libgnomevfs-corba/gnome-vfs-async-ops.c:
	(corba_gnome_vfs_async_get_file_info),
	(corba_gnome_vfs_async_load_directory),
	(corba_gnome_vfs_async_load_directory_uri):
	* libgnomevfs-corba/gnome-vfs-slave-notify.c:
	(impl_Notify_load_directory), (impl_Notify_get_file_info):
	* libgnomevfs-corba/gnome-vfs-slave.c: (allocate_info_list),
	(copy_file_info), (load_directory_not_sorted),
	(load_directory_sorted), (impl_Request_get_file_info),
	(impl_Request_load_directory):
	* libgnomevfs-pthread/gnome-vfs-async-ops.c:
	(pthread_gnome_vfs_async_get_file_info),
	(pthread_gnome_vfs_async_load_directory),
	(pthread_gnome_vfs_async_load_directory_uri):
	* libgnomevfs-pthread/gnome-vfs-job.c:
	(execute_load_directory_not_sorted),
	(execute_load_directory_sorted), (execute_get_file_info),
	(execute_load_directory):
	* libgnomevfs-pthread/gnome-vfs-job.h:
	* libgnomevfs/gnome-vfs-async-ops.h:
	* libgnomevfs/gnome-vfs-backend.c: (gnome_vfs_async_get_file_info),
	(gnome_vfs_async_load_directory_uri),
	(gnome_vfs_async_load_directory):
	* libgnomevfs/gnome-vfs-cancellable-ops.c:
	(gnome_vfs_get_file_info_uri_cancellable),
	(gnome_vfs_get_file_info_from_handle_cancellable):
	* libgnomevfs/gnome-vfs-cancellable-ops.h:
	* libgnomevfs/gnome-vfs-directory-list.c:
	(gnome_vfs_directory_list_load),
	(gnome_vfs_directory_list_load_from_uri):